@@ -1,29 +1,26 @@
+apply(from = "../build-const.gradle.kts")
+
 plugins {
-    id("org.jlleitschuh.gradle.ktlint") version "11.6.0"
     id("com.android.application")
     id("org.jetbrains.kotlin.android")
+    id("kotlin-kapt")
+    id("com.google.dagger.hilt.android")
 }
 
 android {
-    namespace = "com.example.neuro_maining"
-    compileSdk = 34
+    namespace = "com.example.neuroMaining"
+    compileSdk = 35
 
     defaultConfig {
-        applicationId = "com.example.neuro_maining"
-        minSdk = 24
+        applicationId = "com.example.neuroMaining"
+        minSdk = 26
         targetSdk = 34
         versionCode = 1
         versionName = "1.0"
-        multiDexEnabled = true
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary = true
-        }
-        externalNativeBuild {
-            cmake {
-                cppFlags += "-std=c++17"
-            }
         }
     }
 
@@ -37,60 +34,72 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "17"
     }
     buildFeatures {
         compose = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.1"
+        kotlinCompilerExtensionVersion = "1.5.10"
     }
     packaging {
         resources {
             excludes += "/META-INF/{AL2.0,LGPL2.1}"
         }
     }
-    ndkVersion = "23.1.7779620"
-    sourceSets {
-        getByName("main") {
-            jni {
-                srcDirs("src/main/jni")
-            }
-        }
+    kotlin {
+        jvmToolchain(17)
     }
-    externalNativeBuild {
-        cmake {
-            path = file("src/main/cpp/CMakeLists.txt")
-            version = "3.22.1"
-        }
+}
+
+kapt {
+    javacOptions {
+        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
     }
 }
 
 dependencies {
-    implementation("androidx.multidex:multidex:2.0.1")
-    implementation("androidx.navigation:navigation-compose:2.8.5")
-    implementation("androidx.core:core-ktx:1.13.1")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.8.6")
-    implementation("androidx.activity:activity-compose:1.9.3")
+
+    implementation("androidx.core:core-ktx:${project.extra["kotlin_version"]}")
+    implementation("com.google.android.material:material:${project.extra["material_version"]}")
+
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.8.7")
+    implementation("androidx.activity:activity-compose:1.10.0")
     implementation(platform("androidx.compose:compose-bom:2023.08.00"))
     implementation("androidx.compose.ui:ui")
     implementation("androidx.compose.ui:ui-graphics")
     implementation("androidx.compose.ui:ui-tooling-preview")
     implementation("androidx.compose.material3:material3")
-    testImplementation("junit:junit:4.13.2")
-    androidTestImplementation("androidx.test.ext:junit:1.2.1")
-    androidTestImplementation("androidx.test.espresso:espresso-core:3.6.1")
-    androidTestImplementation(platform("androidx.compose:compose-bom:2023.08.00"))
-    androidTestImplementation("androidx.compose.ui:ui-test-junit4")
-    debugImplementation("androidx.compose.ui:ui-tooling")
-    debugImplementation("androidx.compose.ui:ui-test-manifest")
+    implementation("androidx.navigation:navigation-compose:2.8.8")
+    implementation("androidx.wear.compose:compose-material:1.4.1")
+    implementation("androidx.exifinterface:exifinterface:1.4.0")
+    implementation("androidx.lifecycle:lifecycle-runtime-compose:2.8.7")
+
+    implementation("androidx.health.connect:connect-client:1.1.0-alpha11")
+
+    // DI
+    implementation("com.google.dagger:hilt-android:${project.extra["dagger_version"]}")
+    kapt("com.google.dagger:hilt-compiler:${project.extra["dagger_version"]}")
+    implementation("androidx.hilt:hilt-navigation-compose:${project.extra["hilt_navigation_version"]}")
+
+    // Image download
+    implementation("io.coil-kt:coil-compose:${project.extra["koil_version"]}")
+
+    // CameraX
+    implementation("androidx.camera:camera-camera2:1.4.2")
+    implementation("androidx.camera:camera-lifecycle:1.4.2")
+    implementation("androidx.camera:camera-view:1.4.2")
+    implementation("androidx.camera:camera-extensions:1.4.2")
+
+    // Paging
+    implementation("androidx.paging:paging-runtime:3.3.6")
+    implementation("androidx.paging:paging-compose:3.3.6")
 
     // biometric auth
     implementation("androidx.biometric:biometric:1.2.0-alpha05") // or latest stable
-    implementation ("androidx.security:security-crypto:1.1.0-alpha06")
-
+    implementation("androidx.security:security-crypto:1.1.0-alpha06")
 }
